# Doxygen-For-CMake

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: customization.cmake  doxygen_cmake.cmake  example_functions.cmake  example_macros.cmake  example_options.cmake  example_set.cmake
